--- a/package.json
+++ b/package.json
@@ -37,6 +37,13 @@
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "sass": "^1.57.1",
+    "typedoc": "^0.23.24",
+    "typedoc-plugin-carbon-ads": "^1.1.6",
+    "typedoc-plugin-clarity": "^1.1.0",
+    "typedoc-plugin-coverage": "^2.0.0",
+    "typedoc-plugin-keyword": "^1.1.0",
+    "typedoc-plugin-missing-exports": "^1.0.0",
+    "typescript": "^4.9.4",
     "tsparticles": "^2.7.1",
     "tsparticles-editor": "^2.7.1",
     "tsparticles-engine": "^2.7.1",
