--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.html",
   "type": "module",
   "scripts": {
-    "clear:cache": "rimraf -f ./node_modules/.cache",
+    "clear:cache": "rimraf ./node_modules/.cache",
     "lint": "prettier --write ./configs && prettier --write ./css/*.scss && prettier --write ./js/404.js && prettier --write ./js/demo.js && prettier --write ./presets && prettier --write ./samples && prettier --write index.html && prettier --write privacy.html && prettier --write 404.html && prettier --write video.html",
     "lint:ci": "prettier --check ./configs && prettier --check ./css/*.scss && prettier --check ./js/404.js && prettier --check ./js/demo.js && prettier --check ./presets && prettier --check ./samples && prettier --check index.html && prettier --check privacy.html && prettier --check 404.html && prettier --check video.html",
     "build:js": "minify ./js/demo.js > ./js/demo.min.js && minify ./js/404.js > ./js/404.min.js",
