--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -14,6 +17,10 @@ jobs:
         name: Checkout [main]
         with:
           fetch-depth: 0
+      #- name: create env file
+      #  run: |
+      #    touch .env
+      #    echo GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} >> .env
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
