build: updated website, new docs generation

--- a/package.json
+++ b/package.json
@@ -27,26 +27,20 @@
   "homepage": "https://particles.js.org",
   "dependencies": {
     "@pnpm/exec": "^2.0.0",
-    "@types/fs-extra": "^11.0.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/gh-pages": "^3.2.1",
-    "@types/node": "^18.11.18",
-    "fs-extra": "^11.1.0",
+    "@types/node": "^18.16.1",
+    "fs-extra": "^11.1.1",
     "gh-pages": "^5.0.0",
-    "minify": "^9.1.0",
-    "simple-git": "^3.15.1",
-    "prettier": "^2.8.1",
+    "minify": "^9.2.0",
+    "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
-    "sass": "^1.57.1",
-    "typedoc": "^0.24.0",
-    "typedoc-plugin-carbon-ads": "^1.1.6",
-    "typedoc-plugin-clarity": "^1.1.0",
-    "typedoc-plugin-coverage": "^2.0.0",
-    "typedoc-plugin-keyword": "^1.1.0",
-    "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "^5.0.0",
-    "tsparticles": "^2.8.0",
-    "tsparticles-editor": "^2.8.0",
-    "tsparticles-engine": "^2.8.0",
-    "tsparticles-preset-links": "^2.8.0"
+    "sass": "^1.62.1",
+    "simple-git": "^3.18.0",
+    "tsparticles": "^2.9.3",
+    "tsparticles-editor": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
+    "tsparticles-preset-links": "^2.9.3",
+    "typescript": "^5.0.4"
   }
 }
