--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:css": "sass ./css/main.scss ./css/main.css && minify ./css/main.css > ./css/main.min.css && sass ./css/presets.scss ./css/presets.css && minify ./css/presets.css > ./css/presets.min.css && sass ./css/404.scss ./css/404.css && minify ./css/404.css > ./css/404.min.css",
     "build": " pnpm run clear:cache && pnpm run lint && pnpm run build:css && pnpm run build:js",
     "build:ci": " pnpm run clear:cache && pnpm run lint:ci && pnpm run build:css && pnpm run build:js",
+    "build:sitemap": "npx sitemap-generator-cli https://particles.js.org --max-concurrency 10 --change-freq monthly --priority-map \"1.0,0.9,0.8,0.7,0.6,0.5,0.4,0.3,0.2,0.1,0.0\" --last-mod",
     "deploy": "pnpm run build && node deploy.js"
   },
   "repository": {
