--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tsparticles/website",
-  "version": "2.8.0",
+  "version": "2.9.3",
   "private": true,
   "description": "tsParticles Official Website",
   "main": "index.html",
@@ -38,10 +38,18 @@
     "rimraf": "^5.0.0",
     "sass": "^1.62.1",
     "simple-git": "^3.18.0",
+    "tsparticles-preset-links": "^2.9.3",
+    "typedoc": "^0.24.7",
+    "typedoc-plugin-carbon-ads": "^1.4.0",
+    "typedoc-plugin-clarity": "^1.4.0",
+    "typedoc-plugin-coverage": "^2.1.0",
+    "typedoc-plugin-keywords": "^1.4.1",
+    "typedoc-plugin-missing-exports": "^2.0.0",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
     "tsparticles": "^2.9.3",
     "tsparticles-editor": "^2.9.3",
-    "tsparticles-engine": "^2.9.3",
-    "tsparticles-preset-links": "^2.9.3",
-    "typescript": "^5.0.4"
+    "tsparticles-engine": "^2.9.3"
   }
 }
