--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tsparticles/website",
-  "version": "2.10.0",
+  "version": "2.11.0",
   "private": true,
   "description": "tsParticles Official Website",
   "main": "index.html",
@@ -29,26 +29,26 @@
   "dependencies": {
     "@pnpm/exec": "^2.0.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.4.2",
     "fs-extra": "^11.1.1",
     "gh-pages": "^5.0.0",
-    "minify": "^10.2.0",
-    "prettier": "^2.8.8",
+    "minify": "^10.3.0",
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
-    "sass": "^1.62.1",
-    "simple-git": "^3.19.0",
-    "tsparticles-preset-links": "^2.10.1",
+    "sass": "^1.63.6",
+    "simple-git": "^3.19.1",
     "typedoc": "^0.24.8",
     "typedoc-plugin-carbon-ads": "^1.4.0",
     "typedoc-plugin-clarity": "^1.4.0",
     "typedoc-plugin-coverage": "^2.1.0",
     "typedoc-plugin-keywords": "^1.4.1",
     "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "tsparticles": "^2.10.1",
-    "tsparticles-editor": "^2.10.1",
-    "tsparticles-engine": "^2.10.1"
+    "tsparticles": "^2.11.0",
+    "tsparticles-editor": "^2.11.0",
+    "tsparticles-engine": "^2.11.0",
+    "tsparticles-preset-links": "^2.11.0"
   }
 }
