build: added some defer to deferrable scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clear:cache": "rimraf ./node_modules/.cache",
     "lint": "prettier --write ./configs && prettier --write ./css/*.scss && prettier --write ./js/404.js && prettier --write ./js/demo.js && prettier --write ./samples && prettier --write index.html && prettier --write privacy.html && prettier --write 404.html && prettier --write video.html",
     "lint:ci": "prettier --check ./configs && prettier --check ./css/*.scss && prettier --check ./js/404.js && prettier --check ./js/demo.js && prettier --check ./samples && prettier --check index.html && prettier --check privacy.html && prettier --check 404.html && prettier --check video.html",
-    "build:js": "minify ./js/demo.js > ./js/demo.min.js && minify ./js/404.js > ./js/404.min.js",
+    "build:js": "terser -c -o ./js/demo.min.js ./js/demo.js && terser -c -o ./js/404.min.js ./js/404.js && terser -c -o ./js/index.min.js ./js/index.js",
     "build:css": "sass ./css/main.scss ./css/main.css && minify ./css/main.css > ./css/main.min.css && sass ./css/presets.scss ./css/presets.css && minify ./css/presets.css > ./css/presets.min.css && sass ./css/404.scss ./css/404.css && minify ./css/404.css > ./css/404.min.css",
     "build": " pnpm run clear:cache && pnpm run lint && pnpm run build:css && pnpm run build:js",
     "build:ci": " pnpm run clear:cache && pnpm run lint:ci && pnpm run build:css && pnpm run build:js",
@@ -31,21 +31,22 @@
   "dependencies": {
     "@pnpm/exec": "^2.0.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.10.6",
     "fs-extra": "^11.2.0",
-    "gh-pages": "^6.1.0",
-    "minify": "^11.0.0",
-    "prettier": "^3.1.0",
+    "gh-pages": "^6.1.1",
+    "minify": "^11.0.1",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "sass": "^1.69.5",
-    "simple-git": "^3.21.0",
+    "sass": "^1.69.7",
+    "simple-git": "^3.22.0",
+    "terser": "^5.26.0",
     "typedoc": "^0.25.4",
     "typedoc-plugin-carbon-ads": "^1.6.0",
     "typedoc-plugin-clarity": "^1.6.0",
     "typedoc-plugin-coverage": "^2.2.0",
     "typedoc-plugin-keywords": "^1.6.0",
     "typedoc-plugin-missing-exports": "^2.1.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "tsparticles": "^3.0.3",
